--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -1,5 +1,5 @@
 @import 'src/assets/style/base/_custom.scss';
-@import 'src/assets/style/components/_todo.scss';
+@import 'src/assets/style/components/all';
 
 @font-face {
   font-family: 'starjedi';
