--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -1,4 +1,4 @@
-@import 'src/assets/style/base/_custom.scss';
+@import 'src/assets/style/base/all';
 @import 'src/assets/style/components/all';
 
 @font-face {
